--- a/PastEvents.html
+++ b/PastEvents.html
@@ -21,19 +21,19 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 200px;">
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-5" href="./index.html">Home</a>
+                            <a class="nav-link px-4 fs-5" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-5" href="./UpcomingEvents.html">Upcoming Events</a>
+                            <a class="nav-link px-4 fs-5" href="./UpcomingEvents.html">Upcoming Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active pe-5 fs-5" aria-current="page" href="#">Past Events</a>
+                            <a class="nav-link active px-4 fs-5" aria-current="page" href="#">Past Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-5" href="./Contact.html">Contact</a>
+                            <a class="nav-link px-4 fs-5" href="./Contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-5" href="./Stats.html">Stats</a>
+                            <a class="nav-link px-4 fs-5" href="./Stats.html">Stats</a>
                         </li>
                     </ul>
                 </div>
