--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid d-flex justify-content-between align-items-center">
-                <a class="navbar-brand d-flex align-items-center" href="#">
+                <a class="navbar-brand d-flex align-items-center" href="./index.html">
                     <img src="./Assets/amazing_brand.png" alt="Logo" width="150" height="40" class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,19 +21,19 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 200px;">
                         <li class="nav-item">
-                            <a class="nav-link active pe-5 fs-5" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active px-4 fs-5" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-5" href="./UpcomingEvents.html">Upcoming Events</a>
+                            <a class="nav-link px-4 fs-5" href="./UpcomingEvents.html">Upcoming Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-5" href="./PastEvents.html">Past Events</a>
+                            <a class="nav-link px-4 fs-5" href="./PastEvents.html">Past Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-5" href="./Contact.html">Contact</a>
+                            <a class="nav-link px-4 fs-5" href="./Contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-5" href="./Stats.html">Stats</a>
+                            <a class="nav-link px-4 fs-5" href="./Stats.html">Stats</a>
                         </li>
                     </ul>
                 </div>
