--- a/Stats.html
+++ b/Stats.html
@@ -47,8 +47,19 @@
         
     </main>
 
-    <footer>
-
+    <footer class="footer d-flex justify-content-between align-items-center px-4">
+        <div class="d-flex">
+            <a href="https://facebook.com" target="_blank" class="me-2 px-3" >
+                <img src="./Assets/facebook.png" alt="">
+            </a>
+            <a href="https://whatsapp.com" target="_blank" class="me-2 px-3">
+                <img src="./Assets/whatsapp.png" alt="">
+            </a>
+            <a href="https://instagram.com" target="_blank" class="me-2 px-3">
+                <img src="./Assets/instagram.png" alt="">
+            </a>
+        </div>
+        <span class="cohort">Cohort</span>
     </footer>
 
 
