--- a/details.html
+++ b/details.html
@@ -1,11 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Details</title>
+    <link rel="stylesheet" href="./main.css">
+    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <div class="container-fluid d-flex justify-content-between align-items-center">
+            <a class="navbar-brand d-flex align-items-center" href="./index.html">
+                <img src="./Assets/amazing_brand.png" alt="Logo" width="150" height="40"
+                    class="d-inline-block align-text-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link px-4 fs-5" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-4 fs-5" href="./UpcomingEvents.html"> Upcoming Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-4 fs-5" href="./PastEvents.html">Past Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-4 fs-5" href="./Contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-4 fs-5" href="./Stats.html">Stats</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main class="container-fluid py-4" id="main-detail">
+        <div class="row align-items-center">
+            <div class="col-md-6 text-center">
+                <img src="./Assets/food_fair.jpg" alt="food_fair" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <ul class="list-group">
+                    <li class="list-group-item"><strong>Date:</strong> 2022-12-12</li>
+                    <li class="list-group-item"><strong>Description:</strong> Enjoy your favorite dishes from different countries in a unique event for the whole family.</li>
+                    <li class="list-group-item"><strong>Category:</strong> Food Fair</li>
+                    <li class="list-group-item"><strong>Place:</strong> Room A</li>
+                    <li class="list-group-item"><strong>Capacity:</strong> 45,000</li>
+                    <li class="list-group-item"><strong>Assistance:</strong> 42,756</li>
+                    <li class="list-group-item"><strong>Price:</strong> $5</li>
+                </ul>
+            </div>
+        </div>
+    </main>
+
+    <footer class="footer d-flex justify-content-between align-items-center px-4">
+        <div class="d-flex">
+            <a href="https://facebook.com" target="_blank" class="me-2 px-3">
+                <img src="./Assets/facebook.png" alt="">
+            </a>
+            <a href="https://whatsapp.com" target="_blank" class="me-2 px-3">
+                <img src="./Assets/whatsapp.png" alt="">
+            </a>
+            <a href="https://instagram.com" target="_blank" class="me-2 px-3">
+                <img src="./Assets/instagram.png" alt="">
+            </a>
+        </div>
+        <span class="cohort">Cohort</span>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
