--- a/Stats.html
+++ b/Stats.html
@@ -104,13 +104,9 @@
                                         <td></td>
                                     </tr>
                                     
-                                </tbody>
-                                <thead class="table-dark">
                                     <tr>
-                                        <th colspan="3">Upcoming events statistics by category</th>
+                                        <th class="table-dark" colspan="3">Upcoming events statistics by category</th>
                                     </tr>
-                                </thead>
-                                <tbody>
                                     <tr>
                                         <td>Categories</td>
                                         <td>Revenues</td>
@@ -126,13 +122,10 @@
                                         <td></td>
                                         <td></td>
                                     </tr>
-                                </tbody>
-                                <thead class="table-dark">
                                     <tr>
-                                        <th colspan="3">Past events statistics by category</th>
+                                        <th class="table-dark" colspan="3">Past events statistics by category</th>
                                     </tr>
-                                </thead>
-                                <tbody>
+                                
                                     <tr>
                                         <td>Categories</td>
                                         <td>Revenues</td>
