--- a/details.html
+++ b/details.html
@@ -46,21 +46,8 @@
     </nav>
 
     <main class="container-fluid py-4" id="main-detail">
-        <div class="row align-items-center">
-            <div class="col-md-6 text-center">
-                <img src="./Assets/food_fair.jpg" alt="food_fair" class="img-fluid">
-            </div>
-            <div class="col-md-6">
-                <ul class="list-group">
-                    <li class="list-group-item"><strong>Date:</strong> 2022-12-12</li>
-                    <li class="list-group-item"><strong>Description:</strong> Enjoy your favorite dishes from different countries in a unique event for the whole family.</li>
-                    <li class="list-group-item"><strong>Category:</strong> Food Fair</li>
-                    <li class="list-group-item"><strong>Place:</strong> Room A</li>
-                    <li class="list-group-item"><strong>Capacity:</strong> 45,000</li>
-                    <li class="list-group-item"><strong>Assistance:</strong> 42,756</li>
-                    <li class="list-group-item"><strong>Price:</strong> $5</li>
-                </ul>
-            </div>
+        <div id="detalleEvento" class="row align-items-center">
+      
         </div>
     </main>
 
@@ -82,6 +69,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="./detail.js"></script>
 </body>
 
 </html>
