--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
             </button>
           </div>
 
-          <div class="container text-center formularios">
-
+        <div class="container text-center formularios">
             <div class="row">
                 <div class="col-md-8 contenedor-formChec container-fluid pt-2">
                     <div id="checkboxContainer" class="d-flex flex-wrap  justify-content-around">
@@ -123,6 +122,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="./main.js"></script>
+    <script src="./main.js" type="module"></script>
 </body>
 </html>
